# chacha20.wasm

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
run/: compile.ts  prepack.ts
src/node/mods/: mod.test.ts  mod.ts
src/wasm/: Cargo.toml
src/wasm/src/mods/chacha20/: mod.rs
